[gd_scene load_steps=49 format=3 uid="uid://c7w7tvfjmemgc"]

[ext_resource type="Script" path="res://src/characters/Enemies/MeleeEnemy.gd" id="1_gucpg"]
[ext_resource type="PackedScene" uid="uid://2uxq18hqa3ge" path="res://assets/gltf/Ant.gltf" id="2_1r6le"]
[ext_resource type="Script" path="res://src/characters/behaviours/AccelerationBehaviour.gd" id="2_p71vt"]
[ext_resource type="Script" path="res://src/characters/behaviours/AttackingBehaviour.gd" id="4_404x4"]
[ext_resource type="Material" uid="uid://co7rtkg6tjvqu" path="res://assets/materials/enemy_hurt_material.tres" id="4_wusrm"]
[ext_resource type="Script" path="res://src/characters/behaviours/HealthBehaviour.gd" id="5_5c4bi"]
[ext_resource type="Script" path="res://src/characters/hithurtboxes/MeleeAreaDamage.gd" id="5_goyin"]
[ext_resource type="Script" path="res://src/characters/hithurtboxes/HurtBox.gd" id="6_r8cxf"]
[ext_resource type="Script" path="res://src/characters/behaviours/AnimationStateMachineBehaviour.gd" id="10_3jfbi"]
[ext_resource type="AudioStream" uid="uid://iqkffsv2nj2h" path="res://assets/audio/enemies/EnemyBite.wav" id="11_gq40e"]
[ext_resource type="PackedScene" uid="uid://c2lu4g4enrlv7" path="res://src/camera/EnemyHPBar.tscn" id="11_to3id"]
[ext_resource type="AudioStream" uid="uid://cy2gffbhnauvk" path="res://assets/audio/enemies/pain/Pain1.wav" id="14_2csxp"]
[ext_resource type="Script" path="res://src/characters/sid/Sound/Steps.gd" id="14_fliwa"]
[ext_resource type="AudioStream" uid="uid://b0kji0gy6pa2h" path="res://assets/audio/enemies/pain/Pain2.wav" id="15_dbmp6"]
[ext_resource type="AudioStream" uid="uid://djd5lah8m68wb" path="res://assets/audio/enemies/pain/Pain3.wav" id="16_b3ddu"]
[ext_resource type="AudioStream" uid="uid://coqnolvvx3vfl" path="res://assets/audio/enemies/pain/Pain4.wav" id="17_qbumt"]
[ext_resource type="AudioStream" uid="uid://r6fxwmwr2tcs" path="res://assets/audio/enemies/pain/Pain5.wav" id="18_ba1el"]
[ext_resource type="AudioStream" uid="uid://dvnh8uy72i46h" path="res://assets/audio/enemies/pain/Pain6.wav" id="19_dewkj"]
[ext_resource type="AudioStream" uid="uid://dhfbg8hbgde0n" path="res://assets/audio/enemies/death/Death1.wav" id="19_xjslu"]
[ext_resource type="AudioStream" uid="uid://cky7axpfqxkp3" path="res://assets/audio/enemies/death/Death2.wav" id="20_xwdvw"]
[ext_resource type="AudioStream" uid="uid://drm50ed3e4ags" path="res://assets/audio/enemies/walk/Walk1.wav" id="21_i8cig"]
[ext_resource type="AudioStream" uid="uid://b1o5onvnillbj" path="res://assets/audio/enemies/walk/Walk2.wav" id="22_iodvu"]
[ext_resource type="AudioStream" uid="uid://8ixtaosvl5sp" path="res://assets/audio/enemies/walk/Walk3.wav" id="23_terwl"]

[sub_resource type="SphereShape3D" id="SphereShape3D_q85tg"]
radius = 0.55293

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vunjc"]
radius = 0.607195
height = 2.47665

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xwop4"]
height = 1.50159

[sub_resource type="SphereShape3D" id="SphereShape3D_3uq35"]
radius = 11.0838

[sub_resource type="SphereShape3D" id="SphereShape3D_b3320"]
radius = 5.0

[sub_resource type="Animation" id="Animation_8wxqo"]
resource_name = "Hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ant/Armature/Skeleton3D/Ant2:instance_shader_parameters/alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ant/Armature/Skeleton3D/Ant2:instance_shader_parameters/grow")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.1, 0.01]
}

[sub_resource type="Animation" id="Animation_osso2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ant/Armature/Skeleton3D/Ant2:instance_shader_parameters/alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ant/Armature/Skeleton3D/Ant2:instance_shader_parameters/grow")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.01]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ant/Armature/Skeleton3D/Ant2:transparency")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_hjoad"]
resource_name = "die"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ant/Armature/Skeleton3D/Ant2:transparency")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2qf8v"]
_data = {
"Hurt": SubResource("Animation_8wxqo"),
"RESET": SubResource("Animation_osso2"),
"die": SubResource("Animation_hjoad")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5n4gf"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jjfud"]
animation = &"Die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_esvom"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pg0bc"]
animation = &"Walk"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_p57hw"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_5rev0"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_pg0bc")
nodes/Animation/position = Vector2(100, 100)
nodes/WalkSpeed/node = SubResource("AnimationNodeTimeScale_p57hw")
nodes/WalkSpeed/position = Vector2(340, 120)
nodes/output/position = Vector2(560, 160)
node_connections = [&"output", 0, &"WalkSpeed", &"WalkSpeed", 0, &"Animation"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gisf0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_imr3a"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_27m62"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7n48q"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hks6y"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lmfsg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xq1xw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eohx6"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_kpcp8"]
states/Attack/node = SubResource("AnimationNodeAnimation_5n4gf")
states/Attack/position = Vector2(443, 276)
states/Die/node = SubResource("AnimationNodeAnimation_jjfud")
states/Die/position = Vector2(637, 263)
states/Idle/node = SubResource("AnimationNodeAnimation_esvom")
states/Idle/position = Vector2(402, 94)
states/Walk/node = SubResource("AnimationNodeBlendTree_5rev0")
states/Walk/position = Vector2(649, 94)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_gisf0"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_imr3a"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_27m62"), "Attack", "Die", SubResource("AnimationNodeStateMachineTransition_7n48q"), "Idle", "Die", SubResource("AnimationNodeStateMachineTransition_hks6y"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_lmfsg"), "Walk", "Die", SubResource("AnimationNodeStateMachineTransition_xq1xw"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_eohx6")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_oun4w"]

[node name="MeleeEnemy" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_gucpg")

[node name="Ant" parent="." instance=ExtResource("2_1r6le")]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0, 0, 0)

[node name="Skeleton3D" parent="Ant/Armature" index="0"]
bones/7/position = Vector3(1.13301e-13, -1.77821e-08, 1.17146)
bones/7/rotation = Quaternion(8.71815e-08, 0.991537, -0.129822, -6.65861e-07)
bones/8/rotation = Quaternion(0.967051, 0.166041, -0.143477, -0.129061)
bones/9/rotation = Quaternion(0.108116, -0.0287624, 0.00169903, 0.993721)
bones/10/rotation = Quaternion(-0.0235654, 0.00546185, -0.0490358, 0.998504)
bones/11/rotation = Quaternion(0.482255, 0.564808, -0.666765, -0.0620136)
bones/12/rotation = Quaternion(0.0644381, -0.165151, -0.0289813, 0.983734)
bones/13/rotation = Quaternion(-0.331581, 0.142615, 0.0918599, 0.92805)
bones/14/rotation = Quaternion(-0.115512, 0.0342733, -0.0559098, 0.991139)
bones/15/rotation = Quaternion(-0.0976688, 0.0631952, -0.00165706, 0.993209)
bones/16/rotation = Quaternion(-0.0235654, -0.00546278, 0.0490357, 0.998504)
bones/17/rotation = Quaternion(-0.538918, 0.58619, -0.599214, 0.0830091)
bones/18/rotation = Quaternion(0.020648, 0.0835906, 0.027844, 0.995897)
bones/19/rotation = Quaternion(-0.379533, -0.216035, -0.0725916, 0.896668)
bones/20/rotation = Quaternion(-0.155016, -0.120368, 0.0608122, 0.978664)
bones/21/rotation = Quaternion(-0.141492, -0.147375, 0.00329626, 0.978902)
bones/22/rotation = Quaternion(0.305962, 0.926145, 0.108529, 0.192)
bones/23/rotation = Quaternion(0.734925, -0.0104503, 0.0529733, 0.675995)
bones/24/rotation = Quaternion(0.937127, -0.0378781, -0.0958145, -0.333433)
bones/25/rotation = Quaternion(-0.276762, -0.0318289, -0.0211203, 0.960179)
bones/26/rotation = Quaternion(0.687269, 0.573666, 0.145705, 0.421116)
bones/27/rotation = Quaternion(0.779264, -0.0182876, 0.014963, 0.626251)
bones/28/rotation = Quaternion(0.913008, 0.0156849, -0.0303547, -0.406509)
bones/29/rotation = Quaternion(-0.324131, 0.0393653, 0.00929158, 0.945147)
bones/30/rotation = Quaternion(0.840475, 0.396516, 0.0617667, 0.36409)
bones/31/rotation = Quaternion(0.691566, -0.0454903, 0.100283, 0.71387)
bones/32/rotation = Quaternion(0.897915, -0.010691, -0.0856578, -0.431622)
bones/33/rotation = Quaternion(-0.378474, -0.0406337, 0.010272, 0.924663)
bones/34/rotation = Quaternion(-0.305962, 0.926145, 0.108528, -0.191999)
bones/35/rotation = Quaternion(0.734925, 0.0104502, -0.0529734, 0.675995)
bones/36/rotation = Quaternion(0.937118, 0.0378826, 0.0958142, -0.333459)
bones/37/rotation = Quaternion(-0.276762, 0.031829, 0.0211203, 0.960179)
bones/38/rotation = Quaternion(0.68727, -0.573666, -0.145704, 0.421115)
bones/39/rotation = Quaternion(0.779264, 0.0182876, -0.0149631, 0.626251)
bones/40/rotation = Quaternion(0.913008, -0.0156849, 0.0303547, -0.406509)
bones/41/rotation = Quaternion(-0.324131, -0.0393653, -0.00929158, 0.945147)
bones/42/rotation = Quaternion(0.840476, -0.396516, -0.0617656, 0.364089)
bones/43/rotation = Quaternion(0.691566, 0.0454903, -0.100283, 0.71387)
bones/44/rotation = Quaternion(0.897908, 0.0107005, 0.0856584, -0.431637)
bones/45/rotation = Quaternion(-0.378474, 0.0406337, -0.010272, 0.924663)

[node name="Ant2" parent="Ant/Armature/Skeleton3D" index="0"]
material_overlay = ExtResource("4_wusrm")
instance_shader_parameters/alpha = 0.0
instance_shader_parameters/grow = 0.01

[node name="AccelerationBehaviour" type="Node" parent="."]
script = ExtResource("2_p71vt")
turn_speed = 1.5
accelerate_forward = true

[node name="AttackingBehaviour" type="Node" parent="."]
script = ExtResource("4_404x4")
attack_wait_time = 1.0

[node name="HealthBehaviour" type="Node" parent="."]
script = ExtResource("5_5c4bi")
max_health = 50

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.530594, 0)
shape = SubResource("SphereShape3D_q85tg")

[node name="HurtArea" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("6_r8cxf")

[node name="HurtAreaCollision" type="CollisionShape3D" parent="HurtArea"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.579296, -0.172741)
shape = SubResource("CapsuleShape3D_vunjc")

[node name="AttackArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("5_goyin")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.35, -1.5)
shape = SubResource("CapsuleShape3D_xwop4")

[node name="EnemyHPBar" parent="." instance=ExtResource("11_to3id")]

[node name="IdleTarget" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.769249, 0, -1.83481)

[node name="AlertRange" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="AlertRange"]
shape = SubResource("SphereShape3D_3uq35")

[node name="DetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.30238)
shape = SubResource("SphereShape3D_b3320")

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2qf8v")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_kpcp8")
anim_player = NodePath("../Ant/AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_oun4w")
parameters/Walk/WalkSpeed/scale = 1.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("animation_tree")]
script = ExtResource("10_3jfbi")
animation_tree = NodePath("../AnimationTree")

[node name="EnemyAttackSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("11_gq40e")
volume_db = 20.0

[node name="PainSounds" type="Node3D" parent="."]
script = ExtResource("14_fliwa")

[node name="Pain1" type="AudioStreamPlayer3D" parent="PainSounds"]
stream = ExtResource("14_2csxp")

[node name="Pain2" type="AudioStreamPlayer3D" parent="PainSounds"]
stream = ExtResource("15_dbmp6")

[node name="Pain3" type="AudioStreamPlayer3D" parent="PainSounds"]
stream = ExtResource("16_b3ddu")

[node name="Pain4" type="AudioStreamPlayer3D" parent="PainSounds"]
stream = ExtResource("17_qbumt")

[node name="Pain5" type="AudioStreamPlayer3D" parent="PainSounds"]
stream = ExtResource("18_ba1el")

[node name="Pain6" type="AudioStreamPlayer3D" parent="PainSounds"]
stream = ExtResource("19_dewkj")

[node name="DeathSounds" type="Node3D" parent="."]
script = ExtResource("14_fliwa")

[node name="Death1" type="AudioStreamPlayer3D" parent="DeathSounds"]
stream = ExtResource("19_xjslu")

[node name="Death2" type="AudioStreamPlayer3D" parent="DeathSounds"]
stream = ExtResource("20_xwdvw")

[node name="WalkSounds" type="Node3D" parent="."]
script = ExtResource("14_fliwa")

[node name="Walk1" type="AudioStreamPlayer3D" parent="WalkSounds"]
stream = ExtResource("21_i8cig")
max_distance = 100.0

[node name="Walk2" type="AudioStreamPlayer3D" parent="WalkSounds"]
stream = ExtResource("22_iodvu")
max_distance = 100.0

[node name="Walk3" type="AudioStreamPlayer3D" parent="WalkSounds"]
stream = ExtResource("23_terwl")
max_distance = 100.0

[connection signal="attack" from="AttackingBehaviour" to="." method="_on_attacking_behaviour_attack"]
[connection signal="current_changed" from="HealthBehaviour" to="EnemyHPBar/HPBar" method="set_current_hp"]
[connection signal="damaged" from="HealthBehaviour" to="EnemyHPBar/HPBar" method="damaged"]
[connection signal="healed" from="HealthBehaviour" to="EnemyHPBar/HPBar" method="healed"]
[connection signal="max_changed" from="HealthBehaviour" to="EnemyHPBar/HPBar" method="set_max_hp"]
[connection signal="no_health" from="HealthBehaviour" to="." method="_on_health_behaviour_no_health"]
[connection signal="damaged" from="HurtArea" to="." method="_on_hurt_area_damaged"]
[connection signal="state_changed" from="StateMachine" to="." method="_on_state_machine_state_changed"]

[editable path="Ant"]
[editable path="EnemyHPBar"]
